--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#games">Ігри</a>
             <a href="#why">Переваги</a>
             <a href="#discord-section">Discord</a>
-            <a href="admin.html">ПРАВИЛА Discord</a>
+            <!-- <a href="admin.html">ПРАВИЛА Discord</a> -->
         </nav>
         <button id="theme" onclick="theme()">
             <img src="sun.png" alt="theme icon" id="themeIcon">
@@ -88,3 +88,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
