--- a/admin.html
+++ b/admin.html
@@ -111,7 +111,7 @@
         <h3>🗨️ Мова</h3>
         <p>Основна мова спілкування на сервері — українська.  
         Інші мови також дозволені, якщо учасники вас розуміють.</p>
-    </div>
+    </div>;
 
     </div>
 
