--- a/index.html
+++ b/index.html
@@ -37,18 +37,44 @@
       </p>
     </section>
 
-    <section id="games" class="fade-in-up">
-      <h2>🕹️ У нас грають у:</h2>
-      <ul>
-        <li>Counter-Strike 2</li>
-        <li>Roblox</li>
-        <li>Minecraft</li>
-        <li>GTA V RP</li>
-        <li>Valorant</li>
-        <li>і ще десятки інших ігор!</li>
-      </ul>
-      <p>💬 Спілкуйся, грай, шукай тіммейтів, бери участь у турнірах та змаганнях — у нас завжди є активність!</p>
-    </section>
+    <div id="games">
+  <h2>🕹️ У нас грають у:</h2>
+
+  <div class="game-gallery">
+    <div class="game-card">
+      <img src="cs2.webp" alt="Counter-Strike 2">
+      <span>Counter-Strike 2</span>
+    </div>
+
+    <div class="game-card">
+      <img src="Roblox_Corporation_2025_logo.svg.png" alt="Roblox">
+      <span>Roblox</span>
+    </div>
+
+    <div class="game-card">
+      <img src="minecraft.png" alt="Minecraft">
+      <span>Minecraft</span>
+    </div>
+
+    <div class="game-card">
+      <img src="GTA.jpg" alt="GTA V RP">
+      <span>GTA V RP</span>
+    </div>
+
+    <div class="game-card">
+      <img src="valo2.webp" alt="Valorant">
+      <span>Valorant</span>
+    </div>
+
+    <div class="game-card">
+      <img src="more.png" alt="Ще більше ігор">
+      <span>...і ще десятки інших!</span>
+    </div>
+  </div>
+
+  <p>💬 Спілкуйся, грай, шукай тіммейтів, бери участь у турнірах та змаганнях — у нас завжди є активність!</p>
+</div>
+
 
     <section id="why" class="fade-in-up">
       <h2>🚀 Чому саме Nexus Delta UA?</h2>
